fix stretch

--- a/t50-gateway-alpha/client.css
+++ b/t50-gateway-alpha/client.css
@@ -765,8 +765,8 @@ a {
 
 .lock-circle img {
   flex-shrink: 0;
-  max-width: 100%
-  width: 100%;
+  max-width: 100%;
+  width: 50px;
   height: auto;
   object-fit: cover;
 }
